--- a/cartos-master/app/elementos/templates/viewFolioFoto.html
+++ b/cartos-master/app/elementos/templates/viewFolioFoto.html
@@ -32,7 +32,7 @@
                     <div class="x_content">
                         <div class="col-md-12 col-sm-12 col-xs-12">
                             {% if foto %}
-                                <img class="img-responsive center-block" style="margin:0 auto" src="{{url_for("folios_blueprint.static", filename= 'pics/'+folio._id)}}" alt="Avatar" title="Fólio" />
+                                <img class="img-responsive center-block" style="margin:0 auto" src="{{url_for("elementos_blueprint.static", filename= 'pics/'+folio._id)}}" alt="Avatar" title="Fólio" />
                             {% else %}
                                 <h1 class="text-center"> Foto Não Disponível </h1>
                             {% endif %}
