tommi and folios removed

--- a/cartos-master/app/base/templates/login/login.html
+++ b/cartos-master/app/base/templates/login/login.html
@@ -70,7 +70,7 @@
                 Privacidade &nbsp;&nbsp;
               </div>
               <div>
-                <p>©2019 Tommi</p>
+                <p>©2021 Cartos</p>
               </div>  
             </div>
           </form>
