--- a/cartos-master/app/base/templates/pesquisa/res_tag.html
+++ b/cartos-master/app/base/templates/pesquisa/res_tag.html
@@ -65,7 +65,7 @@
                     <table id="datatable-buttons" class="table table-striped table-bordered">
                         <thead>
                             <tr>
-                                <th>Fólio</th>
+                                <th>Elemento</th>
                                 <th>Resultado</th>
                             </tr>
                         </thead>
@@ -73,7 +73,7 @@
                         <tbody>
                             {% for resultado in resultados %}
                             <tr>
-                                <td>{{resultado.idfolio}}</td>
+                                <td>{{resultado.idelemento}}</td>
                                 <td>{{resultado.tag}}</td>
                             </tr>
                             {% endfor %}
@@ -95,7 +95,7 @@
                 Privacidade &nbsp;&nbsp;
             </div>
             <div>
-                <p>©2019 Tommi</p>
+                <p>©2021 Cartos</p>
             </div>
         </div>
     </div>
