--- a/cartos-master/app/base/templates/site_template/sidebar.html
+++ b/cartos-master/app/base/templates/site_template/sidebar.html
@@ -29,9 +29,9 @@
         </li>
         <li><a><i class="fa fa-folder-open"></i> Documentos <span class="fa fa-chevron-down"></span></a>
           <ul class="nav child_menu">
-            <li><a href="/folios/folios?nome={{nome}}">Fólios</a></li>
-            <li><a href="/folios/index?nome={{nome}}">Índices</a></li>
-            <li><a href="/folios/tags?nome={{nome}}">Tags</a></li>
+            <li><a href="/elementos/elementos?nome={{nome}}">Elementos</a></li>
+            <li><a href="/elementos/index?nome={{nome}}">Índices</a></li>
+            <li><a href="/elementos/tags?nome={{nome}}">Tags</a></li>
           </ul>
         </li>
         <li><a href="/analise?nome={{nome}}"><i class="fa fa-search"></i> Análise </a>
