--- a/cartos-master/app/elementos/templates/tags.html
+++ b/cartos-master/app/elementos/templates/tags.html
@@ -39,7 +39,7 @@
                 <tr>
                   <th>Tag</th>
                   <th>Ocorrências</th>
-                  <th>Folios</th>
+                  <th>Elementos</th>
                   <th>Options</th>
                 </tr>
               </thead>
@@ -57,7 +57,7 @@
                     </ul>
                   </td>
                   <td>
-                    <a href="/folios/tags/ver/{{tag._id}}?nome={{nome}}"><button><i class="fa fa-eye"></i></button></a>
+                    <a href="/elementos/tags/ver/{{tag._id}}?nome={{nome}}"><button><i class="fa fa-eye"></i></button></a>
                   </td>
                 </tr>
                 {% endfor %}
