--- a/cartos-master/app/importacao/templates/import2.html
+++ b/cartos-master/app/importacao/templates/import2.html
@@ -1,6 +1,6 @@
 {% extends "base_site.html" %}
 
-{% block title %} Integração de Folios {% endblock title %}
+{% block title %} Integração de Elementos {% endblock title %}
 
 {% block stylesheets %}
 {{ super() }}
@@ -26,7 +26,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Integração de Folios - Visualização</h2>
+                        <h2>Integração de Elementos - Visualização</h2>
                         <div class="clearfix"></div>
                         <div class="text-right">
                           <form id="form-importAll" action="/import/skip/?nome={{nome}}" method="POST" enctype="multipart/form-data" data-parsley-validate>
