--- a/cartos-master/app/importacao/templates/import5.html
+++ b/cartos-master/app/importacao/templates/import5.html
@@ -1,6 +1,6 @@
 {% extends "base_site.html" %}
 
-{% block title %} Integração de Folios {% endblock title %}
+{% block title %} Integração de Elementos {% endblock title %}
 
 {% block stylesheets %}
 {{ super() }}
@@ -28,7 +28,7 @@
           <div class="x_title">
             <div class="row">
               <div align="left">
-                <h2>Integração de Folios - Indexação</h2>
+                <h2>Integração de Elementos - Indexação</h2>
                 <div class="clearfix"></div>
               </div>
             </div>
@@ -43,7 +43,7 @@
                 <tr>
                   <th>Palavra</th>
                   <th>Ocorrências</th>
-                  <th>Folios</th>
+                  <th>Elementos</th>
                 </tr>
               </thead>
 
