--- a/cartos-master/app/base/templates/base_site.html
+++ b/cartos-master/app/base/templates/base_site.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
       {% endblock meta %}
 
-      <title>Tommi | {% block title %}{% endblock %}</title>
+      <title>Cartos | {% block title %}{% endblock %}</title>
 
       {% block stylesheets %}
         <!-- Bootstrap -->
