--- a/cartos-master/app/base/templates/pesquisa/res_texto.html
+++ b/cartos-master/app/base/templates/pesquisa/res_texto.html
@@ -65,7 +65,7 @@
                     <table id="datatable-buttons" class="table table-striped table-bordered">
                         <thead>
                             <tr>
-                                <th>Fólio</th>
+                                <th>Elemento</th>
                                 <th>Linha</th>
                                 <th>Resultado</th>
                             </tr>
@@ -74,7 +74,7 @@
                         <tbody>
                             {% for resultado in resultados %}
                             <tr>
-                                <td>{{resultado.idfolio}}</td>
+                                <td>{{resultado.idelemento}}</td>
                                 <td>{{resultado.linha}}</td>
                                 <td>{{resultado.valor}}</td>
                             </tr>
@@ -98,7 +98,7 @@
                 Privacidade &nbsp;&nbsp;
             </div>
             <div>
-                <p>©2019 Tommi</p>
+                <p>©2021 Cartos</p>
             </div>
         </div>
     </div>
