--- a/cartos-master/app/elementos/templates/viewTag.html
+++ b/cartos-master/app/elementos/templates/viewTag.html
@@ -34,7 +34,7 @@
                             <table id="datatable-buttons" class="table table-striped table-bordered">
                                 <thead>
                                     <tr>
-                                        <th>Fólios</th>
+                                        <th>Elementos</th>
                                         <th>Conteudo</th>
                                     </tr>
                                 </thead>
