--- a/cartos-master/app/home/templates/index.html
+++ b/cartos-master/app/home/templates/index.html
@@ -25,8 +25,8 @@
         <div class="x_content">
           <div class="row tile_count">
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-book"></i> Fólios</span>
-              <div class="count">{{folios}}</div>
+              <span class="count_top"><i class="fa fa-book"></i> Elementos</span>
+              <div class="count">{{elementos}}</div>
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-file-word-o"></i> Palavras</span>
